; ModuleID = '/home/carl/AnghaBench/linux/tools/usb/usbip/src/extr_usbipd.c_recv_request_devlist.c'
source_filename = "/home/carl/AnghaBench/linux/tools/usb/usbip/src/extr_usbipd.c_recv_request_devlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.op_devlist_request = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"usbip_net_recv failed: devlist request\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"send_reply_devlist failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @recv_request_devlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recv_request_devlist(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.op_devlist_request, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = call i32 @memset(%struct.op_devlist_request* %4, i32 0, i32 4)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @usbip_net_recv(i32 %7, %struct.op_devlist_request* %4, i32 4)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @dbg(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %21

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @send_reply_devlist(i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %13
  %19 = call i32 @dbg(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %21

20:                                               ; preds = %13
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %18, %11
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @memset(%struct.op_devlist_request*, i32, i32) #1

declare dso_local i32 @usbip_net_recv(i32, %struct.op_devlist_request*, i32) #1

declare dso_local i32 @dbg(i8*) #1

declare dso_local i32 @send_reply_devlist(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
